# ML-homework

./: .gitignore  README.md  main.py
01/: HW1.ipynb
02/: HW2.ipynb
03/: HW3.ipynb
04/: HW4.ipynb
05/: Dockerfile  HW5.ipynb  marketing.py  predict.py  pyproject.toml  test_docker.py
06/: HW6.ipynb
Maternal-risk/: Dockerfile  Notebook.ipynb  README.md  predict.py  pyproject.toml  test.txt  train.py
Parkinsons_detect/: Dockerfile  Notebook.ipynb  README.md  main.py  predict.py  pyproject.toml  test.txt  train.py
